# what-to-wear

./: main.py  pyproject.toml
src/what_to_wear/: __init__.py  cli.py  closet.py  config.py  display.py  initialize.py  io.py  state.py  utils.py
