[project]
name = "what-to-wear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt Yorkilous", email = "matt_yorkilous@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.5.0",
    "pytz>=2025.2",
]

[project.scripts]
what-to-wear = "what_to_wear:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
